# python-codimd

./: .flake8  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst
python_codimd/: __init__.py
tests/: test_fizzbuzz.py
