[metadata]
name = python_codimd
author = Sören Wegener
author-email = wegener92@gmail.com
summary = This package demonstrates building and publishing Python Packages with GitHubs infrastructure
description-file = README.md
description-content-type = text/markdown

[files]
packages =
    python_codimd